<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/login_edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:text="@string/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/login_edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_ckbConectado"
            android:text="@string/ckbConectado"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/login_btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#333"
            android:text="@string/btnEntrar"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:onClick="logar"/>
    </LinearLayout>
</ScrollView>
